feat: 내스토리 목록 조회

--- a/frontend/src/assets/styles/_variables.scss
+++ b/frontend/src/assets/styles/_variables.scss
@@ -1,4 +1,5 @@
 $whiteBackgroundColor: #ffffff;
 $primaryColor: #ff2f2f;
-$headerHeight: 9vh;
+$headerHeight: 8vh;
 $footerHeight: 8vh;
+$navigationHeight: 8vh;
